# Mood-Map-Hacklanta

./: .env.example  .gitignore  LICENSE  New Microsoft Excel Worksheet.xlsx  README.md  eslint.config.js  package-lock.json  package.json  present.txt  run.bat  server.js  vercel.json
api/: generate-reel-script.js
lib/: chatSafety.js  groq.js  pyClient.js
py-service/: .env.example  README.md  pyproject.toml
py-service/corpus/: contacts.json
py-service/src/py_service/: config.py  ingest.py  llm.py  main.py  rag.py  schemas.py
src/: App.css  App.jsx  api.js  firebase.js  index.css  storage.js
src/components/: CompanionPanel.css  CompanionPanel.jsx  CounselorAlert.css  CounselorAlert.jsx  CrisisCard.css  CrisisCard.jsx  CrisisPanel.css  CrisisPanel.jsx  MoodCount.css  MoodJournal.css  MoodJournal.jsx  RecoveryFeed.css  RecoveryFeed.jsx  ReelGenerator.jsx  ReelPlayer.css  ReelPlayer.jsx  UpdateMoodPanel.css  UpdateMoodPanel.jsx
src/features/map/: pinState.js
src/styles/: app-effects-overlays.css  app-shell-layout.css
